  Auto Tab (0.7) 2010-07-05
    * Fix deprecated method calls (issue #8)
    * Added a Makefile for install/uninstall
    * Workaround for issue #13, try to guess tab/spaces for file with weird indent
    * Make plugin work on Windows, by faking gconf (issue #9, issue #11)

  Auto Tab (0.6)  2009-09-27
    * Special case Makefiles so they always use tabs.
    * Fix proper counting of indentation, patch from danielfalk22 (issue #7)

  Auto Tab (0.5)  2008-09-19
    * Bugfix release: Closes issue #4 and issue #5.

  Auto Tab (0.4)  2008-02-27
    * New, smarter algorithm courtesy of Lars Uebernickel.
    * Bugfix for Gedit 2.20 and above (fixes issue #2, issue #3).
    * GPLv3

  Auto Tab (0.3)  2007-03-30
    * Added a way for other plugins to tell Auto Tab to skip processing a 
      document with view.set_data("AutoTabSkip", True).

  Auto Tab (0.2)  2007-03-23
    * Changed to use "loaded" and "saved" signals instead of update_ui.
    * Added Modelines plugin compatibility, if the Modelines plugin is active and
      has set tab settings they will be respected and displayed as-is.
    * Added CHANGELOG file.

  Auto Tab (0.1)  2007-03-11
    * Initial release to http://code.google.com/p/gedit-autotab/